--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -23,7 +23,7 @@
         <ul class="navbar-nav justify-content-center w-100">
           <li class="nav-item mx-2" th:each="c : ${categories}">
             <a class="nav-link px-3 rounded-md transition-colors duration-200 hover:bg-gray-200 hover:text-gray-900"
-               th:href="@{|/boards?userId=${user.id}&dept=${user.department.name()}&categoryId=${c.id}|}"
+               th:href="@{|/boards?userId=${user.id}&categoryId=${c.id}|}"
                th:text="${c.displayName}">카테고리</a>
           </li>
         </ul>
