--- a/src/main/resources/templates/mypage/scraps.html
+++ b/src/main/resources/templates/mypage/scraps.html
@@ -13,7 +13,7 @@
     <tr>
       <th class="text-center" style="width: 60%;">제목</th>
       <th class="text-center" style="width: 25%;">작성자</th>
-      <th class="text-center" style="width: 15%;">날짜</th>
+      <th class="text-center" style="width: 15%;">게시글 작성일</th>
     </tr>
     </thead>
     <tbody>
